--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -48,6 +48,18 @@ body:
         - label: GNOME Web / other WebKit-based browser
         - label: Cockpit Client / Cockpit Desktop
         - label: Other (specify in the comments)
+  - type: input
+    id: os-client
+    attributes:
+      label: Operating system (client)
+      description: |
+        (Optional)
+
+        Please share the operating system where you're using the browser.
+      placeholder: |
+        examples: Windows 10, macOS 12.2, macOS Big Sur, iOS 15.3, Fedora 35, etc.
+    validations:
+      required: false
   - type: dropdown
     id: page
     attributes:
@@ -76,10 +88,14 @@ body:
   - type: textarea
     id: logs
     attributes:
-      label: Relevant parts of the system log are also useful
+      label: System log
       description: |
-        If the issue happened in the last 10 minutes, use `journalctl --since -10m`.
-        If you know which systemd unit was affected, use `journalctl -u cockpit -u <unit>`.
+        (Optional; feel free to leave blank if it does not apply)
+
+        Relevant parts of the server's log are useful.
+
+        If the issue happened in the last 10 minutes, use: `journalctl --since -10m`
+        If you know which systemd unit was affected, use: `journalctl -u cockpit -u <unit>`
 
         This will be automatically formatted, backticks are not needed.
       render: shell
