required: false in most cases

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -29,7 +29,7 @@ body:
         - openSUSE Tumbleweed
         - other
     validations:
-      required: true
+      required: false
   - type: input
     id: os-version
     attributes:
