--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -7,7 +7,11 @@ body:
     attributes:
       label: Please help us out by explaining how to reproduce it.
       description: |
-        Include steps on how to reproduce, screenshots if visible, etc.
+        Include steps on how to reproduce. Including screenshots is very helpful.
+      value: |
+        1. 
+        2. 
+        3. 
     validations:
       required: true
   - type: markdown
