--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -5,7 +5,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## Thank you!
+        ### Thank you!
 
         Thanks for taking the time to fill out this bug report!
   - type: textarea
