--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -5,9 +5,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ### Thank you!
-
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to fill out this bug report! It helps to make sure Cockpit works well for you and everyone!
   - type: textarea
     id: what-happened
     attributes:
