--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -5,7 +5,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report! It helps to make sure Cockpit works well everyone, including you!
+        Thanks for taking the time to fill out this bug report! It helps to make sure Cockpit works well everyone, including you! :sparkles:
   - type: textarea
     id: what-happened
     attributes:
