move cockpit version up

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,6 +6,15 @@ body:
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report! It helps to make sure Cockpit works well everyone, including you! :sparkles:
+  - type: input
+    id: cockpit-version
+    attributes:
+      label: Version of Cockpit
+      description: |
+        You can find this in "About Web Console" under the help menu at the top-right of Cockpit.
+        (In older versions, the about menu option was under the rightmost menu.)
+    validations:
+      required: false
   - type: textarea
     id: what-happened
     attributes:
@@ -28,6 +37,9 @@ body:
         - If you want to discuss something, [post a new discussion](https://github.com/cockpit-project/cockpit/discussions/new) in our [discussion forum](https://github.com/cockpit-project/cockpit/discussions).
         - If you have a problem with a component, those issues are filed elsewhere: [Machines](https://github.com/cockpit-project/cockpit-machines/issues/new), [Podman](https://github.com/cockpit-project/cockpit-podman/issues/new/choose), [OStree](https://github.com/cockpit-project/cockpit-ostree/issues/new), or the [starter kit](https://github.com/cockpit-project/starter-kit/issues/new). 
 
+  - type: markdown
+    attributes:
+      value: |
         <br>
 
         ---
@@ -57,15 +69,6 @@ body:
         - terminal
         - selinux
         - shell
-  - type: input
-    id: cockpit-version
-    attributes:
-      label: Version of Cockpit
-      description: |
-        You can find this in "About Web Console" under the help menu at the top-right of Cockpit.
-        (In older versions, the about menu option was under the rightmost menu.)
-    validations:
-      required: false
   - type: markdown
     attributes:
       value: |
