--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -57,11 +57,13 @@ body:
       value: |
         <!-- add a bit of space -->
   - type: dropdown
-    id: page
+    id: label
     attributes:
       label: Where is the problem?
       options:
         - not applicable / unknown
+        - documentation
+        - duplicate
         - overview
         - metrics
         - logs
